# ondotori-client

./: .gitignore  LICENSE  MANIFEST.in  PKG-INFO  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  publish.yml
docs/: api_reference.md  usage.md  usage_advanced.md
examples/: basic_usage.py
src/ondotori_client/: __init__.py  client.py  config.py  exceptions.py  models.py  parsers.py  transport.py
src/ondotori_client.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_client.py  test_config.py  test_parsers.py  test_transport.py
tests/integration/: test_real_api.py
