[project]
name = "ondotori-client"
version = "0.1.0"
description = "Ondotori WebStorage API クライアント"
authors = [{name="Hiroki Tsusaka", email="tsusaka4research@gmail.com"}]
readme = "README.md"
license = {text = "MIT"}

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28"
pandas = "^1.5"

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "flake8>=5.0",
  "black>=23.1",
  "isort>=5.10"
]

# pyproject.toml の末尾などに追加
[tool.flake8]
max-line-length = 88
extend-ignore = [
  "E203",  # Black と衝突しやすいスペース周り
  "W503"   # Black 推奨の改行前演算子スタイル
]