[project]
name = "ondotori-client"
dynamic = ["version"]
description = "Ondotori WebStorage API クライアント"
readme = { file = "README.md", content-type = "text/markdown" }
authors = [
  { name = "Hiroki Tsusaka", email = "tsusaka4research@gmail.com" }
]
license = "MIT"
license-files = ["LICENSE"]

# 本番依存
dependencies = [
  "requests>=2.28,<3.0",
]

# dev extras
[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "flake8>=5.0",
  "black>=23.1",
  "isort>=5.10",
]
# DataFrame 出力機能を使いたい人向けエクストラ
dataframe = [
  "numpy>=1.23,<2.0",
  "pandas>=1.5,<2.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools_scm[toml]>=7.1"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
#  Git タグ (例: v0.3.5) からバージョンを自動生成します。
#  タグが無い開発コミットでは .dev 付きバージョンになります。
version_scheme = "post-release"
local_scheme = "node-and-date"
