[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ondotori-client"
version = "0.4.0"
description = "Ondotori WebStorage API client for Python"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "Hiroki Tsusaka", email = "tsusaka4research@gmail.com" }
]
keywords = ["ondotori", "webstorage", "temperature", "humidity", "sensor"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Typing :: Typed"
]
dependencies = [
  "requests>=2.28,<3.0"
]

[project.optional-dependencies]
dataframe = [
  "pandas>=1.5,<3.0"
]
dev = [
  "build>=1.2",
  "mypy>=1.10",
  "pandas>=1.5,<3.0",
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.6",
  "types-requests>=2.31"
]

[project.urls]
Homepage = "https://github.com/1160-hrk/ondotori-client"
Repository = "https://github.com/1160-hrk/ondotori-client"
Issues = "https://github.com/1160-hrk/ondotori-client/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
ondotori_client = ["py.typed"]

[tool.pytest.ini_options]
addopts = "-ra --strict-markers"
testpaths = ["tests"]
markers = [
  "integration: configs/config.json を使って実際の WebStorage API に接続するテスト"
]

[tool.coverage.run]
branch = true
source = ["ondotori_client"]

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]
ignore = ["RUF001", "RUF002", "RUF003"]

[tool.ruff.lint.isort]
known-first-party = ["ondotori_client"]

[tool.mypy]
python_version = "3.10"
check_untyped_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
exclude = ["tests/"]

[[tool.mypy.overrides]]
module = "pandas"
ignore_missing_imports = true
